# ratatoskidl

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  conanfile.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: build.yml  gh-pages.yml
_static/: eq_fix.css
api/: class_view_hierarchy.html  dir_src.html  dir_src_FKIN.html  dir_src_Netatmo.html  dir_src_Ratatosk.html  dir_src_pingpong.html  enum_namespacefkin_1a270bb4fb5438923892cd6ee7e02ad720.html  enum_namespacefkin_1a5e26e33afb4f13df1a93d28906e73b48.html  file_src_FKIN_fkin_types.idl.html  file_src_Netatmo_weather_types.idl.html  file_src_Ratatosk_basic_types.idl.html  file_src_pingpong_ping.idl.html  file_src_pingpong_pong.idl.html  file_view_hierarchy.html  library-api.html  namespace_fkin.html  namespace_ratatosk.html  namespace_ratatosk__types.html  namespace_test.html  namespace_test__ping.html  namespace_test__pong.html  namespace_weather.html  program_listing_file_src_FKIN_fkin_types.idl.html  program_listing_file_src_Netatmo_weather_types.idl.html  program_listing_file_src_Ratatosk_basic_types.idl.html  program_listing_file_src_pingpong_ping.idl.html  program_listing_file_src_pingpong_pong.idl.html  structfkin_1_1BatchIdVec1d.html  structfkin_1_1BatchKinematics2D.html  structfkin_1_1BatchKinematics6D.html  structfkin_1_1Bit.html  structfkin_1_1Command.html  structfkin_1_1CommandResponse.html  structfkin_1_1IdVec1d.html  structfkin_1_1IdVec2d.html  structfkin_1_1IdVec3d.html  structfkin_1_1IdVec4d.html  structfkin_1_1Kinematics2D.html  structfkin_1_1Kinematics6D.html  structfkin_1_1MessageID.html  (+29 more)
cmake/: RatatoskIDLHelpers.cmake  projectConfig.cmake.in
doc/: CMakeLists.txt  SfhDocHelpers.cmake  conf.py.in  index.rst.in  requirements.txt
doc/_ext/: enumerable.py
doc/_templates/: breadcrumbs.html
doc/static/: enumerable.css  style.puml
examples/: CMakeLists.txt  conanfile.txt  ping.cpp  pong.cpp
markup/: README.html
src/FKIN/: fkin_types.idl
src/Netatmo/: weather_types.idl
src/Ratatosk/: basic_types.idl
src/pingpong/: ping.idl  pong.idl
test_package/: CMakeLists.txt  conanfile.py  ratatoskIdlTest.cpp
